--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>17-css-tekst</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 
 <body>  
     <div class="zewnetrzny">    
     <h1>Przykładowy tekst</h1>  
         <p class="wewnetrzny">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. <span style="color:rgb(255, 0, 0)"> Cumque, incidunt nemo</span> assumenda necessitatibus
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. <span class="czcionka"> Cumque, incidunt nemo</span> assumenda necessitatibus
         excepturi ut deleniti accusantium suscipit praesentium illum officia quia provident et, beatae voluptatem. Ipsa
         magni deserunt dolore.    
         </p>
